default boeing ND symbols on ND and PFD

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/mapConfig.json
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/mapConfig.json
@@ -15,6 +15,7 @@
 
   "flightPlanWaypointIconSize": 22,
   "auxWaypointLabelFontSize": 10,
+  "auxWaypointIconSize": 16,
 
   "intersectionLabelColor": "#009696",
   "vorLabelColor": "#009696",
