--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "gulp-ignore": "^3.0.0",
     "gulp-zip": "^5.0.2",
     "mathjs": "^9.2.0",
-    "through2": "^4.0.2"
-  },
-  "dependencies": {
+    "through2": "^4.0.2",
     "del": "^6.0.0"
   }
 }
