--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/mapConfig.json
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/mapConfig.json
@@ -16,6 +16,7 @@
   "flightPlanWaypointIconSize": 22,
   "auxWaypointLabelFontSize": 10,
   "auxWaypointIconSize": 16,
+  "topOfXWaypointIconSize": 4,
 
   "intersectionLabelColor": "#009696",
   "vorLabelColor": "#009696",
