--- a/.github/workflows/discord.yml
+++ b/.github/workflows/discord.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install NPM Dependencies (prod)
         run: npm install --frozen-lockfile --production
       - name: Send message to discord
-        uses: ./ # Uses an action in the root directory
+        uses: Sniddl/discord-commits@v1.3
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
           message: "Successful commit to **{{ github.context.payload.repository.owner.name }}/{{ github.context.payload.repository.name}}**.\nDiff: {{ github.context.payload.compare }}"
