MISC -> Added engine.cfg based on 747 engine.cfg MISC -> performance changed to GenX-1B76 engine MISC -> FUEL FLOW increased

--- a/SimObjects/Airplanes/Asobo_B787_10/engines.cfg
+++ b/SimObjects/Airplanes/Asobo_B787_10/engines.cfg
@@ -1,10 +1,17 @@
+;
+; Data based on default 747 engines.cfg
+; Specific GEnx-1B76 data based on
+; EASA TYPE CERTIFICATE DATA SHEET
+; and
+; FAA TYPE CERTIFICATE DATA SHEET
+
 [VERSION]
 major = 1
 minor = 0
 
 [GENERALENGINEDATA]
 engine_type = 1 ; 0=Piston, 1=Jet, 2=None, 3=Helo-Turbine, 4=Rocket, 5=Turboprop
-fuel_flow_scalar = 1.1336 ; Fuel flow scalar // Was: 0.8
+fuel_flow_scalar = 1.128 ; Fuel flow scalar // Was: 0.8 // Should be 1.1336
 min_throttle_limit = -0.25 ; Minimum percent throttle.  Generally negative for turbine reverser
 master_ignition_switch = 0
 starter_type = 0 ; 0=Electric, 1=Manual, 2=Bleed Air
@@ -16,9 +23,9 @@ ThrustAnglesPitchHeading.1 = 0, 0
 
 [TURBINEENGINEDATA]
 fuel_flow_gain = 0.002 ; Gain on fuel flow
-inlet_area = 60 ; Square Feet, engine nacelle inlet area
-rated_N2_rpm = 29920 ; RPM, second stage compressor rated value
-static_thrust = 66500 ; Lbs, max rated static thrust at Sea Level
+inlet_area = 68 ; Square Feet, engine nacelle inlet area
+rated_N2_rpm = 13368 ; RPM, second stage compressor rated value
+static_thrust = 78500 ; Lbs, max rated static thrust at Sea Level
 reverser_available = 2.0
 reverser_mach_controlled = 0
 afterburner_available = 0
@@ -73,12 +80,12 @@ N1_to_oil_pressure_table = 0:0, 0.21:0.88, 0.9:0.954, 1:1 ; % of max Oil Pressur
 n1_normal_tc = 0.5 ; Float factor changing N1 acceleration during normal use of the engine
 n1_start_max_rate = 1.0 ; Float limiting N1 acceleration during starter use
 n1_start_combustion_max_rate = 2.0 ; Float limiting N1 acceleration during startup when cumbustion has started
-idle_fuel_flow = 3100 ; pound per hour
+idle_fuel_flow = 1500 ; pound per hour
 low_idle_n1 = 23.2
 low_idle_n2 = 60
 high_n1 = 98
 high_n2 = 102
-high_fuel_flow = 8000
+high_fuel_flow = 9300
 min_n2_for_fuel_flow = 22
 mach_influence_on_n1 = 10
 fuel_flow_max = 10000
@@ -100,4 +107,3 @@ DisableFuelValveControls = 0 ; Disable fuel valve controls
 DisableMixtureControls = 1 ; Disable mixture controls
 DisableParkingBrakeControls = 0 ; Disable parking brake controls
 DisablePropellerControls = 1 ; Disable propeller controls
-
