--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "package_version": "0.1.9-32",
+    "package_version": "0.1.9",
     "dependencies": [
         {
             "name": "asobo-aircraft-b787-10",
@@ -21,5 +21,5 @@
             "OlderHistory": ""
         }
     },
-    "total_package_size": "00000000000018894299"
+    "total_package_size": "00000000000018898235"
 }
