--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "package_version": "0.1.10",
+    "package_version": "0.1.11-0",
     "dependencies": [
         {
             "name": "asobo-aircraft-b787-10",
