--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "gulp-update-version": "^1.0.2",
     "gulp-zip": "^5.0.2",
     "mathjs": "^9.2.0",
-    "through2": "^4.0.2"
-  }
+    "merge-stream": "^2.0.0",
+    "readable-stream": "^3.6.0",
+    "through2": "^4.0.2",
+    "typescript": "^4.4.3"
+  },
+  "dependencies": {}
 }
