--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-ignore": "^3.0.0",
+    "gulp-rollup": "^2.17.0",
+    "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-update-version": "^1.0.2",
     "gulp-zip": "^5.0.2",
     "mathjs": "^9.2.0",
