--- a/src/instruments/tsconfig.json
+++ b/src/instruments/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "moduleResolution": "node",
-    "target": "ES2015",
-    "module": "ES2015",
+    "target": "ES2017",
+    "module": "ES2017",
     "lib": [
       "es2015",
       "es2016",
@@ -10,8 +10,9 @@
       "dom"
     ],
     "allowJs": true,
-    "strict": true,
-    "declaration": true,
+    "strict": false,
+    "declaration": false,
+    "declarationMap": false,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
@@ -21,11 +22,10 @@
     "rootDir": ".",
     "baseUrl": ".",
     "typeRoots": [
-      "./types/**"
+      "./types/**/"
     ]
   },
   "exclude": [
     "node_modules"
-  ],
-  "include": ["../../**/*"]
+  ]
 }
