--- a/src/package.json
+++ b/src/package.json
@@ -10,15 +10,24 @@
   "author": "",
   "license": "",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.0.6",
     "@types/node": "^16.11.6",
     "deepmerge": "^4.2.2",
     "gulp": "^4.0.2",
     "gulp-bump": "^3.2.0",
+    "gulp-exec": "^5.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-rollup": "^2.17.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-zip": "^5.1.0",
+    "http": "^0.0.1-security",
     "merge2": "^1.4.1",
-    "typescript": "^4.4.4"
+    "path": "^0.12.7",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-stream": "^1.24.1",
+    "socket.io": "^4.3.2",
+    "socket.io-client": "^4.3.2",
+    "typescript": "^4.4.4",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
