--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -2,11 +2,12 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "target": "ES2017",
-    "module": "es2017",
+    "module": "ES2015",
     "lib": [
       "es2015",
       "es2016",
       "es2017",
+      "ES2018",
       "dom"
     ],
     "strict": false,
