MCPVSpeed window is implemented in c++ now

--- a/SimObjects/Airplanes/Asobo_B787_10/panel/PANEL.CFG
+++ b/SimObjects/Airplanes/Asobo_B787_10/panel/PANEL.CFG
@@ -48,7 +48,7 @@ htmlgauge00=Airliners/B787_10/HDG/B787_10_HDG.html,	0,0, 512, 204
 size_mm=512,102
 pixel_size=512,102
 texture=FCU_VSPEED
-htmlgauge00=Airliners/B787_10/VSpeed/B787_10_VSpeed.html,	0,0, 512, 102
+htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=MCPVSpeed, 0,0,512, 102
 
 [VCockpit09]
 size_mm=512,204
