TCPs panels are implemented in CPP. Added support for STORED VHF frequencies. Font of TCP changed to Heavy FMC font.

--- a/SimObjects/Airplanes/Asobo_B787_10/panel/PANEL.CFG
+++ b/SimObjects/Airplanes/Asobo_B787_10/panel/PANEL.CFG
@@ -31,6 +31,7 @@ size_mm=512,512
 pixel_size=512,512
 texture=AttitudeDisplay
 htmlgauge00=Airliners/B787_10/SAI/B787_10_SAI.html, 0,0,512,512
+htmlgauge01=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=tool_simconnect_handling, 0,0, 1, 1
 
 [VCockpit06]
 size_mm=512,204
@@ -48,31 +49,31 @@ htmlgauge00=Airliners/B787_10/HDG/B787_10_HDG.html,	0,0, 512, 204
 size_mm=512,102
 pixel_size=512,102
 texture=FCU_VSPEED
-htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=MCPVSpeed, 0,0,512, 102
+htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=mcp_vspeed, 0,0,512, 102
 
 [VCockpit09]
 size_mm=512,204
 pixel_size=512,204
 texture=FCU_ALT
-htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=MCPAltitude, 0,0,512, 204
+htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=mcp_altitude, 0,0,512, 204
 
 [VCockpit10]
 size_mm=340,256
 pixel_size=340,256
 texture=COMNAV_Screen_1
-htmlgauge00=Airliners/B787_10/COM/B787_10_Com.html?Index=1,	0,0, 340, 256
+htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=pedestal_tuning_control_panel_1, 0,0, 340, 256, 1
 
 [VCockpit11]
 size_mm=340,256
 pixel_size=340,256
 texture=COMNAV_Screen_2
-htmlgauge00=Airliners/B787_10/COM/B787_10_Com.html?Index=2,	0,0, 340, 256
+htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=pedestal_tuning_control_panel_2, 0,0, 340, 256, 2
 
 [VCockpit12]
 size_mm=340,256
 pixel_size=340,256
 texture=COMNAV_Screen_3
-htmlgauge00=Airliners/B787_10/COM/B787_10_Com.html?Index=3,	0,0, 340, 256
+htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=pedestal_tuning_control_panel_3, 0,0, 340, 256, 3
 
 [VCockpit13]
 size_mm=1380,1280
