--- a/.github/workflows/discord.yml
+++ b/.github/workflows/discord.yml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - 'main'
+      - 'experimental'
 
 jobs:
   disord_message:
@@ -22,6 +22,6 @@ jobs:
         uses: Sniddl/discord-commits@v1.3
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
-          message: "Successful commit to **{{ github.context.payload.repository.owner.name }}/{{ github.context.payload.repository.name}}**.\nDiff: {{ github.context.payload.compare }}"
+          message: "**EXPERIMENTAL BRANCH**: Successful commit to **{{ github.context.payload.repository.owner.name }}/{{ github.context.payload.repository.name}}**.\nDiff: {{ github.context.payload.compare }}"
           embed: '{ "title": "{{ commit.title }}", "description": "{{ commit.description }}", "url": "{{ commit.url }}", "author": { "name": "{{ commit.author.name }} ({{ commit.author.username }})", "icon_url": "https://avatars.io/gravatar/{{ commit.author.email }}"} }'
           last-commit-only: false
