--- a/.github/workflows/discord.yml
+++ b/.github/workflows/discord.yml
@@ -4,7 +4,7 @@ on:
       - 'experimental'
 
 jobs:
-  disord_message:
+  discord_message:
     runs-on: ubuntu-latest
     name: discord commits
     steps:
