base flight_model.cfg copy over to HD

--- a/SimObjects/Airplanes/Asobo_B787_10/flight_model.cfg
+++ b/SimObjects/Airplanes/Asobo_B787_10/flight_model.cfg
@@ -109,7 +109,7 @@ Line.18 =Name:TANKRIGHTFWDTOTANKRIGHTFWDPUMP#Title:TankRightFwdToTankRightFwdPum
 Line.19 =Name:TANKRIGHTFWDPUMPTORIGHTFWDJUNC#Title:TankRightFwdPumpToRightFwdJunc#Source:RIGHTFWDPUMP#Destination:RIGHTFWDJUNCTION
 Line.20 =Name:RIGHTFWDJUNCTORIGHTENGVALVE#Title:RightFwdJuncToRightEngValve#Source:RIGHTFWDJUNCTION#Destination:RIGHTENGVALVE
 Line.21 =Name:RIGHTENGVALVETORIGHTENGINE#Title:RightEngValveToRightEngine#Source:RIGHTENGVALVE#Destination:RIGHTENGINE
-Line.22 =Name:APUJUNCTOAPUDCPUMP#Title:APUJuncToAPUDCPump#Source:APUJUNCTION#Destination:APUDCPUMP
+Line.22 =Name:APUJUNCTOAPU#Title:APUJuncToAPU#Source:APUJUNCTION#Destination:APU
 Line.23 =Name:LEFTXFEEDJUNCTOXFEEDVALVE#Title:LeftXFeedJuncToXFeedValve#Source:LEFTXFEEDJUNCTION#Destination:XFEEDVALVE
 Line.24 =Name:RIGHTXFEEDJUNCTOXFEEDVALVE#Title:RightXFeedJuncToXFeedValve#Source:RIGHTXFEEDJUNCTION#Destination:XFEEDVALVE
 Line.25 =Name:LEFTAFTJUNCTOLEFTJETTISONARMINGVALVE#Title:LeftAftJuncToLeftJettisonArmingValve#Source:LEFTAFTJUNCTION#Destination:LEFTJETTISONARMINGVALVE
@@ -164,7 +164,7 @@ Trigger.3 = Name:TransferLeftToRight#Condition:Manual#Threshold:0.0#Index:-1#Eff
 Trigger.4 = Name:TransferRightToLeft#Condition:Manual#Threshold:0.0#Index:-1#EffectTrue:OpenValve.TRANSFERLEFTVALVE#EffectFalse:CloseValve.TRANSFERLEFTVALVE#DelayTrue:0#DelayFalse:0
 Trigger.5 = Name:EndTransfer#Condition:TankAbsImbalanceBelow#Target:LEFTMAIN,RIGHTMAIN#Threshold:20.0#Index:-1#EffectTrue:StopTrigger.TRANSFERLEFTTORIGHT,StopTrigger.TRANSFERRIGHTTOLEFT#DelayTrue:0#DelayFalse:0
 Trigger.6 = Name:ScavengeFuel#Condition:TankQuantityBelow#Target:CENTER#Threshold:6060.0#Index:-1#EffectTrue:OpenValve.SCAVENGEVALVELEFT,OpenValve.SCAVENGEVALVERIGHT#EffectFalse:CloseValve.SCAVENGEVALVELEFT,CloseValve.SCAVENGEVALVERIGHT#DelayTrue:0#DelayFalse:0
-
+APU.0=Name:APU#Title:APU#FuelBurnRate:221.1
 
 [AIRPLANE_GEOMETRY]
 wing_area =4058
