CHANGED: Added flaps settings description

--- a/SimObjects/Airplanes/Asobo_B787_10/flight_model.cfg
+++ b/SimObjects/Airplanes/Asobo_B787_10/flight_model.cfg
@@ -430,68 +430,76 @@ drag_scalar=1
 pitch_scalar=1
 max_on_ground_position=9
 delay_between_flap_index=0
-flaps-position.0= 0, -1, 1, 1, 1, 0, 0
+;                   POSITION | SPEED LIMIT | DRAG SCALAR | LIFT SCALAR | AREA SCALAR | ADD CHAMBER | ADD AFT FEET | ADD INCIDENCE
+flaps-position.0=      0,          -1,           1,             1,             1,           0,             0
+flaps-position.1=      0,          260,          1,             1,             1,           0,             0
+flaps-position.2=      5,          240,          0.4,           1,             1,           0,             0
+flaps-position.3=      10,         230,          0.5,           1,             1,           0,             0
+flaps-position.4=      15,         225,          0.6,           1,             1,           0,             0
+flaps-position.5=      17,         220,          0.7,           1,             1,           0,             0
+flaps-position.6=      18,         215,          0.75,          1,             1,           0,             0
+flaps-position.7=      20,         210,          0.8,           1,             1,           0,             0
+flaps-position.8=      20,         190,          0.9,           1,             1,           0,             0
+flaps-position.9=      30,         180,          1,             1,             1,           0,             0
+
 flaps-position-autoretract.0= -57.29578, -1, -1
-flaps-position-maneuvering.0=0
-flaps-position-speed-factor.0=0.000000:-1.000000
-flaps-position-speed-override-above.0= -1, -1
-flaps-position-speed-override-below.0= -1, -1
-flaps-position.1= 0, 260, 1, 1, 1, 0, 0
-flaps-position-inhibit.1=increasing,decreasing
 flaps-position-autoretract.1= -57.29578, -1, -1
-flaps-position-maneuvering.1=0
-flaps-position-speed-factor.1=0.000000:-1.000000
-flaps-position-speed-override-above.1= -1, -1
-flaps-position-speed-override-below.1= -1, -1
-flaps-position.2= 5, 240, 0.4, 1, 1, 0, 0
 flaps-position-autoretract.2= -57.29578, -1, -1
-flaps-position-maneuvering.2=0
-flaps-position-speed-factor.2=0.000000:-1.000000
-flaps-position-speed-override-above.2= -1, -1
-flaps-position-speed-override-below.2= -1, -1
-flaps-position.3= 10, 230, 0.5, 1, 1, 0, 0
 flaps-position-autoretract.3= -57.29578, -1, -1
-flaps-position-maneuvering.3=0
-flaps-position-speed-factor.3=0.000000:-1.000000
-flaps-position-speed-override-above.3= -1, -1
-flaps-position-speed-override-below.3= -1, -1
-flaps-position.4= 15, 225, 0.6, 1, 1, 0, 0
 flaps-position-autoretract.4= -57.29578, -1, -1
-flaps-position-maneuvering.4=0
-flaps-position-speed-factor.4=0.000000:-1.000000
-flaps-position-speed-override-above.4= -1, -1
-flaps-position-speed-override-below.4= -1, -1
-flaps-position.5= 17, 220, 0.7, 1, 1, 0, 0
 flaps-position-autoretract.5= -57.29578, -1, -1
-flaps-position-maneuvering.5=0
-flaps-position-speed-factor.5=0.000000:-1.000000
-flaps-position-speed-override-above.5= -1, -1
-flaps-position-speed-override-below.5= -1, -1
-flaps-position.6= 18, 215, 0.75, 1, 1, 0, 0
 flaps-position-autoretract.6= -57.29578, -1, -1
-flaps-position-maneuvering.6=0
-flaps-position-speed-factor.6=0.000000:-1.000000
-flaps-position-speed-override-above.6= -1, -1
-flaps-position-speed-override-below.6= -1, -1
-flaps-position.7= 20, 210, 0.8, 1, 1, 0, 0
 flaps-position-autoretract.7= -57.29578, -1, -1
-flaps-position-maneuvering.7=0
-flaps-position-speed-factor.7=0.000000:-1.000000
-flaps-position-speed-override-above.7= -1, -1
-flaps-position-speed-override-below.7= -1, -1
-flaps-position.8= 20, 190, 0.9, 1, 1, 0, 0
-flaps-position-inhibit.8=increasing,decreasing
 flaps-position-autoretract.8= -57.29578, -1, -1
-flaps-position-maneuvering.8=0
-flaps-position-speed-factor.8=0.000000:-1.000000
-flaps-position-speed-override-above.8= -1, -1
-flaps-position-speed-override-below.8= -1, -1
-flaps-position.9= 30, 180, 1, 1, 1, 0, 0
 flaps-position-autoretract.9= -57.29578, -1, -1
+
+flaps-position-maneuvering.0=0
+flaps-position-maneuvering.1=0
+flaps-position-maneuvering.2=0
+flaps-position-maneuvering.3=0
+flaps-position-maneuvering.4=0
+flaps-position-maneuvering.5=0
+flaps-position-maneuvering.6=0
+flaps-position-maneuvering.7=0
+flaps-position-maneuvering.8=0
 flaps-position-maneuvering.9=0
+
+flaps-position-speed-factor.0=0.000000:-1.000000
+flaps-position-speed-factor.1=0.000000:-1.000000
+flaps-position-speed-factor.2=0.000000:-1.000000
+flaps-position-speed-factor.3=0.000000:-1.000000
+flaps-position-speed-factor.4=0.000000:-1.000000
+flaps-position-speed-factor.5=0.000000:-1.000000
+flaps-position-speed-factor.6=0.000000:-1.000000
+flaps-position-speed-factor.7=0.000000:-1.000000
+flaps-position-speed-factor.8=0.000000:-1.000000
 flaps-position-speed-factor.9=0.000000:-1.000000
+
+flaps-position-speed-override-above.0= -1, -1
+flaps-position-speed-override-above.1= -1, -1
+flaps-position-speed-override-above.2= -1, -1
+flaps-position-speed-override-above.3= -1, -1
+flaps-position-speed-override-above.4= -1, -1
+flaps-position-speed-override-above.5= -1, -1
+flaps-position-speed-override-above.6= -1, -1
+flaps-position-speed-override-above.7= -1, -1
+flaps-position-speed-override-above.8= -1, -1
 flaps-position-speed-override-above.9= -1, -1
+
+flaps-position-speed-override-below.0= -1, -1
+flaps-position-speed-override-below.1= -1, -1
+flaps-position-speed-override-below.2= -1, -1
+flaps-position-speed-override-below.3= -1, -1
+flaps-position-speed-override-below.4= -1, -1
+flaps-position-speed-override-below.5= -1, -1
+flaps-position-speed-override-below.6= -1, -1
+flaps-position-speed-override-below.7= -1, -1
+flaps-position-speed-override-below.8= -1, -1
 flaps-position-speed-override-below.9= -1, -1
+
+flaps-position-inhibit.1=increasing,decreasing
+flaps-position-inhibit.8=increasing,decreasing
+
 [FLAPS.1]
 type=2
 system_type=1
@@ -507,63 +515,70 @@ drag_scalar=0.5
 pitch_scalar=0.5
 max_on_ground_position=9
 delay_between_flap_index=0
-flaps-position.0= 0, -1, 1, 1, 1, 0, 0
+
+;                    POSITION         | SPEED LIMIT | DRAG SCALAR | LIFT SCALAR | AREA SCALAR | ADD CHAMBER | ADD AFT FEET | ADD INCIDENCE
+flaps-position.0=       0,                  -1,            1,            1,            1,            0,            0
+flaps-position.1=       15,                  260,          0.5,          1,            1,            0,            0
+flaps-position.2=       15.572958,           240,          0.5,          1,            1,            0,            0
+flaps-position.3=       16.145916,           230,          0.5,          1,            1,            0,            0
+flaps-position.4=       16.718873,           225,          0.5,          1,            1,            0,            0
+flaps-position.5=       17.291831,           220,          0.5,          1,            1,            0,            0
+flaps-position.6=       17.864789,           215,          0.5,          1,            1,            0,            0
+flaps-position.7=       18.437747,           210,          0.5,          1,            1,            0,            0
+flaps-position.8=       31,                  190,          1,            1,            1,            0,            0
+flaps-position.9=       31.572958,           180,          1,            1,            1,            0,            0
+
 flaps-position-autoretract.0= -57.29578, -1, -1
-flaps-position-maneuvering.0=0
-flaps-position-speed-factor.0=0.000000:-1.000000
-flaps-position-speed-override-above.0= -1, -1
-flaps-position-speed-override-below.0= -1, -1
-flaps-position.1= 15, 260, 0.5, 1, 1, 0, 0
 flaps-position-autoretract.1= -57.29578, -1, -1
-flaps-position-maneuvering.1=0
-flaps-position-speed-factor.1=0.000000:-1.000000
-flaps-position-speed-override-above.1= -1, -1
-flaps-position-speed-override-below.1= -1, -1
-flaps-position.2= 15.572958, 240, 0.5, 1, 1, 0, 0
 flaps-position-autoretract.2= -57.29578, -1, -1
-flaps-position-maneuvering.2=0
-flaps-position-speed-factor.2=0.000000:-1.000000
-flaps-position-speed-override-above.2= -1, -1
-flaps-position-speed-override-below.2= -1, -1
-flaps-position.3= 16.145916, 230, 0.5, 1, 1, 0, 0
 flaps-position-autoretract.3= -57.29578, -1, -1
-flaps-position-maneuvering.3=0
-flaps-position-speed-factor.3=0.000000:-1.000000
-flaps-position-speed-override-above.3= -1, -1
-flaps-position-speed-override-below.3= -1, -1
-flaps-position.4= 16.718873, 225, 0.5, 1, 1, 0, 0
 flaps-position-autoretract.4= -57.29578, -1, -1
-flaps-position-maneuvering.4=0
-flaps-position-speed-factor.4=0.000000:-1.000000
-flaps-position-speed-override-above.4= -1, -1
-flaps-position-speed-override-below.4= -1, -1
-flaps-position.5= 17.291831, 220, 0.5, 1, 1, 0, 0
 flaps-position-autoretract.5= -57.29578, -1, -1
-flaps-position-maneuvering.5=0
-flaps-position-speed-factor.5=0.000000:-1.000000
-flaps-position-speed-override-above.5= -1, -1
-flaps-position-speed-override-below.5= -1, -1
-flaps-position.6= 17.864789, 215, 0.5, 1, 1, 0, 0
 flaps-position-autoretract.6= -57.29578, -1, -1
-flaps-position-maneuvering.6=0
-flaps-position-speed-factor.6=0.000000:-1.000000
-flaps-position-speed-override-above.6= -1, -1
-flaps-position-speed-override-below.6= -1, -1
-flaps-position.7= 18.437747, 210, 0.5, 1, 1, 0, 0
 flaps-position-autoretract.7= -57.29578, -1, -1
-flaps-position-maneuvering.7=0
-flaps-position-speed-factor.7=0.000000:-1.000000
-flaps-position-speed-override-above.7= -1, -1
-flaps-position-speed-override-below.7= -1, -1
-flaps-position.8= 31, 190, 1, 1, 1, 0, 0
 flaps-position-autoretract.8= -57.29578, -1, -1
-flaps-position-maneuvering.8=0
-flaps-position-speed-factor.8=0.000000:-1.000000
-flaps-position-speed-override-above.8= -1, -1
-flaps-position-speed-override-below.8= -1, -1
-flaps-position.9= 31.572958, 180, 1, 1, 1, 0, 0
 flaps-position-autoretract.9= -57.29578, -1, -1
+
+flaps-position-maneuvering.0=0
+flaps-position-maneuvering.1=0
+flaps-position-maneuvering.2=0
+flaps-position-maneuvering.3=0
+flaps-position-maneuvering.4=0
+flaps-position-maneuvering.5=0
+flaps-position-maneuvering.6=0
+flaps-position-maneuvering.7=0
+flaps-position-maneuvering.8=0
 flaps-position-maneuvering.9=0
+
+flaps-position-speed-factor.0=0.000000:-1.000000
+flaps-position-speed-factor.1=0.000000:-1.000000
+flaps-position-speed-factor.2=0.000000:-1.000000
+flaps-position-speed-factor.3=0.000000:-1.000000
+flaps-position-speed-factor.4=0.000000:-1.000000
+flaps-position-speed-factor.5=0.000000:-1.000000
+flaps-position-speed-factor.6=0.000000:-1.000000
+flaps-position-speed-factor.7=0.000000:-1.000000
+flaps-position-speed-factor.8=0.000000:-1.000000
 flaps-position-speed-factor.9=0.000000:-1.000000
+
+flaps-position-speed-override-above.0= -1, -1
+flaps-position-speed-override-above.1= -1, -1
+flaps-position-speed-override-above.2= -1, -1
+flaps-position-speed-override-above.3= -1, -1
+flaps-position-speed-override-above.4= -1, -1
+flaps-position-speed-override-above.5= -1, -1
+flaps-position-speed-override-above.6= -1, -1
+flaps-position-speed-override-above.7= -1, -1
+flaps-position-speed-override-above.8= -1, -1
 flaps-position-speed-override-above.9= -1, -1
+
+flaps-position-speed-override-below.0= -1, -1
+flaps-position-speed-override-below.1= -1, -1
+flaps-position-speed-override-below.2= -1, -1
+flaps-position-speed-override-below.3= -1, -1
+flaps-position-speed-override-below.4= -1, -1
+flaps-position-speed-override-below.5= -1, -1
+flaps-position-speed-override-below.6= -1, -1
+flaps-position-speed-override-below.7= -1, -1
+flaps-position-speed-override-below.8= -1, -1
 flaps-position-speed-override-below.9= -1, -1
