FIXED: FLAPS extending/retracting (HOTFIX)
0 - retracted
1 - slats extended
5 - flaps position 5
10 - flaps position 10
15 - flaps position 15
17 - flaps position 17
18 - flaps position 18
20 - flaps position 20
25 - slats full extended
30 - flaps position 30

--- a/SimObjects/Airplanes/Asobo_B787_10/flight_model.cfg
+++ b/SimObjects/Airplanes/Asobo_B787_10/flight_model.cfg
@@ -497,8 +497,11 @@ flaps-position-speed-override-below.7= -1, -1
 flaps-position-speed-override-below.8= -1, -1
 flaps-position-speed-override-below.9= -1, -1
 
-flaps-position-inhibit.1=increasing,decreasing
-flaps-position-inhibit.8=increasing,decreasing
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;;;;;;;;;;Removed because this break EICAS (Protect trail flaps index changing);;;;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;flaps-position-inhibit.1=increasing
+;flaps-position-inhibit.8=increasing
 
 [FLAPS.1]
 type=2
