CHANGED: PFD implementation
New PFD C++ implementation
Changed fonts of PFD
PFD redesigned
AUX display reimplemented

--- a/SimObjects/Airplanes/Asobo_B787_10/panel/PANEL.CFG
+++ b/SimObjects/Airplanes/Asobo_B787_10/panel/PANEL.CFG
@@ -5,7 +5,8 @@
 size_mm=1280,950
 pixel_size=1280,950
 texture=PFD
-htmlgauge00=Airliners/B787_10/PFD/B787_10_PFD.html, 0,0,1280,950
+htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=display, 0,0,1280,950, pfd_display
+htmlgauge01=Airliners/B787_10/PFD/B787_10_PFD.html, 0,0,1280,950
 
 [VCockpit02]
 size_mm=1280,950
