--- a/SimObjects/Airplanes/Asobo_B787_10/panel/PANEL.CFG
+++ b/SimObjects/Airplanes/Asobo_B787_10/panel/PANEL.CFG
@@ -5,7 +5,7 @@
 size_mm=1280,950
 pixel_size=1280,950
 texture=PFD
-htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=display, 0,0,1280,950, pfd_display
+htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=left_outboard_display, 0,0,1280,950
 htmlgauge01=Airliners/B787_10/PFD/B787_10_PFD.html, 0,0,1280,950
 
 [VCockpit02]
@@ -33,6 +33,7 @@ pixel_size=512,512
 texture=AttitudeDisplay
 htmlgauge00=Airliners/B787_10/SAI/B787_10_SAI.html, 0,0,512,512
 htmlgauge01=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=tool_simconnect_handling, 0,0, 1, 1
+htmlgauge02=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=ccs, 0,0, 1, 1
 
 [VCockpit06]
 size_mm=512,204
@@ -50,13 +51,13 @@ htmlgauge00=Airliners/B787_10/HDG/B787_10_HDG.html,	0,0, 512, 204
 size_mm=512,102
 pixel_size=512,102
 texture=FCU_VSPEED
-htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=mcp_vspeed, 0,0,512, 102
+htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=mcp_vertical_speed_display, 0,0,512, 102
 
 [VCockpit09]
 size_mm=512,204
 pixel_size=512,204
 texture=FCU_ALT
-htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=mcp_altitude, 0,0,512, 204
+htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=mcp_altitude_display, 0,0,512, 204
 
 [VCockpit10]
 size_mm=340,256
