--- a/SimObjects/Airplanes/Asobo_B787_10/panel/PANEL.CFG
+++ b/SimObjects/Airplanes/Asobo_B787_10/panel/PANEL.CFG
@@ -45,7 +45,7 @@ htmlgauge00=Airliners/B787_10/IAS/B787_10_IAS.html,	0,0, 512, 204
 size_mm=512,204
 pixel_size=512,204
 texture=FCU_HDG
-htmlgauge00=Airliners/B787_10/HDG/B787_10_HDG.html,	0,0, 512, 204
+htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=mcp_heading_display, 0,0,512, 204
 
 [VCockpit08]
 size_mm=512,102
