init new .wasm module

--- a/SimObjects/Airplanes/Heavy-Division-B78XH-mod/panel/PANEL.CFG
+++ b/SimObjects/Airplanes/Heavy-Division-B78XH-mod/panel/PANEL.CFG
@@ -5,7 +5,7 @@
 size_mm=1280,950
 pixel_size=1280,950
 texture=PFD
-htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=left_outboard_display, 0,0,1280,950
+htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH.wasm&wasm_gauge=left_outboard_display, 0,0,1280,950
 htmlgauge01=Airliners/Heavy-Division-B78XH-mod/PFD/B787_10_PFD.html, 0,0,1280,950
 
 [VCockpit02]
