--- a/SimObjects/Airplanes/Heavy-Division-B78XH-mod/panel/PANEL.CFG
+++ b/SimObjects/Airplanes/Heavy-Division-B78XH-mod/panel/PANEL.CFG
@@ -5,7 +5,7 @@
 size_mm=1280,950
 pixel_size=1280,950
 texture=PFD
-htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=left_outboard_display, 0,0,1280,950
+htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH.wasm&wasm_gauge=left_outboard_display, 0,0,1280,950
 htmlgauge01=Airliners/Heavy-Division-B78XH-mod/PFD/B787_10_PFD.html, 0,0,1280,950
 
 [VCockpit02]
@@ -32,8 +32,8 @@ size_mm=512,512
 pixel_size=512,512
 texture=AttitudeDisplay
 htmlgauge00=Airliners/Heavy-Division-B78XH-mod/SAI/B787_10_SAI.html, 0,0,512,512
-htmlgauge01=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=tool_simconnect_handling, 0,0, 1, 1
-htmlgauge02=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=ccs, 0,0, 1, 1
+htmlgauge01=WasmInstrument/WasmInstrument.html?wasm_module=B78XH.wasm&wasm_gauge=tool_simconnect_handling, 0,0, 1, 1
+htmlgauge02=WasmInstrument/WasmInstrument.html?wasm_module=B78XH.wasm&wasm_gauge=ccs, 0,0, 1, 1
 
 [VCockpit06]
 size_mm=512,204
@@ -45,37 +45,37 @@ htmlgauge00=Airliners/B787_10/IAS/B787_10_IAS.html,	0,0, 512, 204
 size_mm=512,204
 pixel_size=512,204
 texture=FCU_HDG
-htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=mcp_heading_display, 0,0,512, 204
+htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH.wasm&wasm_gauge=mcp_heading_display, 0,0,512, 204
 
 [VCockpit08]
 size_mm=512,102
 pixel_size=512,102
 texture=FCU_VSPEED
-htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=mcp_vertical_speed_display, 0,0,512, 102
+htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH.wasm&wasm_gauge=mcp_vertical_speed_display, 0,0,512, 102
 
 [VCockpit09]
 size_mm=512,204
 pixel_size=512,204
 texture=FCU_ALT
-htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=mcp_altitude_display, 0,0,512, 204
+htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH.wasm&wasm_gauge=mcp_altitude_display, 0,0,512, 204
 
 [VCockpit10]
 size_mm=340,256
 pixel_size=340,256
 texture=COMNAV_Screen_1
-htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=pedestal_tuning_control_panel_1, 0,0, 340, 256, 1
+htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH.wasm&wasm_gauge=pedestal_tuning_control_panel_1, 0,0, 340, 256, 1
 
 [VCockpit11]
 size_mm=340,256
 pixel_size=340,256
 texture=COMNAV_Screen_2
-htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=pedestal_tuning_control_panel_2, 0,0, 340, 256, 2
+htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH.wasm&wasm_gauge=pedestal_tuning_control_panel_2, 0,0, 340, 256, 2
 
 [VCockpit12]
 size_mm=340,256
 pixel_size=340,256
 texture=COMNAV_Screen_3
-htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH-wasm.wasm&wasm_gauge=pedestal_tuning_control_panel_3, 0,0, 340, 256, 3
+htmlgauge00=WasmInstrument/WasmInstrument.html?wasm_module=B78XH.wasm&wasm_gauge=pedestal_tuning_control_panel_3, 0,0, 340, 256, 3
 
 [VCockpit13]
 size_mm=1380,1280
