--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "b78xhl-heavy",
-  "version": "1.0.0",
+  "name": "b78xh",
+  "author": "heavy-division",
+  "version": "0.1.0",
   "description": "",
+  "license": "GPL-3.0",
   "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,12 +12,10 @@
     "type": "git",
     "url": "git+https://github.com/Heavy-Division/B78XHL.git"
   },
-  "author": "",
-  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/Heavy-Division/B78XHL/issues"
   },
-  "homepage": "https://github.com/Heavy-Division/B78XHL#readme",
+  "homepage": "https://hdsimulations.com",
   "devDependencies": {
     "del": "^6.0.0",
     "gulp": "^4.0.2",
